--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.capstone.nfc">
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.capstone.nfc">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.NFC" />
+
     <uses-feature
         android:name="android.hardware.nfc"
         android:required="true" />
@@ -29,10 +28,7 @@
         <activity android:name=".auth.AuthActivity" />
         <activity android:name=".main.MainActivity" />
 
-        <service
-            android:name=".services.NFCHCEService"
-            android:exported="true"
-            android:enabled="false"
+        <service android:name=".services.NFCHCEService" android:exported="true" android:enabled="true"
             android:permission="android.permission.BIND_NFC_SERVICE">
             <intent-filter>
                 <action android:name="android.nfc.cardemulation.action.HOST_APDU_SERVICE" />
