--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'commons-io:commons-io:2.8.0'
+    implementation "com.airbnb.android:lottie:5.0.3"
 }
 
 kapt {
