--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.capstone.nfc">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.capstone.nfc">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.NFC" />
 
@@ -18,17 +20,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NFC">
-        <activity android:name=".splash.SplashActivity"
+        <activity
+            android:name=".ui.reader.ReaderActivity"
+            android:exported="false" />
+        <activity
+            android:name=".splash.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".auth.AuthActivity" />
         <activity android:name=".main.MainActivity" />
 
-        <service android:name=".services.NFCHCEService" android:exported="true" android:enabled="true"
+        <service
+            android:name=".services.NFCHCEService"
+            android:enabled="true"
+            android:exported="true"
             android:permission="android.permission.BIND_NFC_SERVICE">
             <intent-filter>
                 <action android:name="android.nfc.cardemulation.action.HOST_APDU_SERVICE" />
