--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NFC">
         <activity
+            android:name=".auth.SignInActivity"
+            android:exported="false"
+            android:label="@string/title_activity_sign_in"
+            android:theme="@style/Theme.NFC.NoActionBar" />
+        <activity
             android:name=".ui.writer.WriterActivity"
             android:exported="false"
             android:theme="@style/Theme.Writer" />
