--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.capstone.nfc">
+    package="com.capstone.nfc" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.NFC" />
@@ -19,7 +19,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NFC">
+        android:theme="@style/Theme.NFC" >
+        <activity
+            android:name=".ui.search.SearchableActivity"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                       android:resource="@xml/searchable" />
+        </activity>
         <activity
             android:name=".ui.writer.WriterActivity"
             android:exported="false"
@@ -30,7 +39,7 @@
             android:theme="@style/Theme.Reader" />
         <activity
             android:name=".splash.SplashActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,13 +47,16 @@
             </intent-filter>
         </activity>
         <activity android:name=".auth.AuthActivity" />
-        <activity android:name=".main.MainActivity" />
+        <activity android:name=".main.MainActivity" >
+            <meta-data android:name="android.app.default_searchable"
+                       android:value=".ui.search.SearchableActivity" />
+        </activity>
 
         <service
             android:name=".services.NFCHCEService"
             android:enabled="true"
             android:exported="true"
-            android:permission="android.permission.BIND_NFC_SERVICE">
+            android:permission="android.permission.BIND_NFC_SERVICE" >
             <intent-filter>
                 <action android:name="android.nfc.cardemulation.action.HOST_APDU_SERVICE" />
             </intent-filter>
