COnnected with firebase

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ dependencies {
 
     implementation 'com.github.lspradeep:simple-form:v1.0.1'
 
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
